WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97100
[EFL] EFL's DRT does not support overriding 'WebKitCSSRegionsEnabled' preference
https://bugs.webkit.org/show_bug.cgi?id=97100
Summary
[EFL] EFL's DRT does not support overriding 'WebKitCSSRegionsEnabled' preference
Chris Dumez
Reported
2012-09-19 05:47:05 PDT
EFL's DRT does not support overriding 'WebKitCSSRegionsEnabled' preference which causes the following test to fail: fast/repaint/line-flow-with-floats-in-regions.html We have different output for WK1 and WK2 because WebKitTestRunner supports overriding the preference.
Attachments
Patch
(349.54 KB, patch)
2012-09-19 06:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-19 06:03:12 PDT
Created
attachment 164724
[details]
Patch
Chris Dumez
Comment 2
2012-09-19 06:07:32 PDT
This patch fixes fast/repaint/line-flow-with-floats-in-regions.html failure on EFL-WK2 build bot since the new baseline for WK1 is now the same as WK2 output.
WebKit Review Bot
Comment 3
2012-09-19 06:31:52 PDT
Comment on
attachment 164724
[details]
Patch Clearing flags on attachment: 164724 Committed
r128993
: <
http://trac.webkit.org/changeset/128993
>
WebKit Review Bot
Comment 4
2012-09-19 06:31:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug