[EFL] EFL's DRT does not support overriding 'WebKitCSSRegionsEnabled' preference https://bugs.webkit.org/show_bug.cgi?id=97100

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-19
Reviewed by Gyuyoung Kim.

Source/WebKit/efl:

Add DumpRenderTree support method to set the
'WebKitCSSRegionsEnabled' preference.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setCSSRegionsEnabled):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

EFL's DRT now supports overriding the 'WebKitCSSRegionsEnabled'
preference, in order to match WebKitTestRunner functionality.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/TestRunnerEfl.cpp:
(TestRunner::overridePreference):

LayoutTests:

Rebaseline and unskip several test cases now that EFL's DRT
supports overriding 'WebKitCSSRegionsEnabled' preference.

* platform/efl/Skipped:
* platform/efl/TestExpectations:
* platform/efl/fast/repaint/japanese-rl-selection-repaint-in-regions-expected.png:
* platform/efl/fast/repaint/japanese-rl-selection-repaint-in-regions-expected.txt:
* platform/efl/fast/repaint/line-flow-with-floats-in-regions-expected.png:
* platform/efl/fast/repaint/line-flow-with-floats-in-regions-expected.txt:
* platform/efl/fast/repaint/overflow-flipped-writing-mode-block-in-regions-expected.txt:
* platform/efl/fast/repaint/region-painting-invalidation-expected.png: Added.
* platform/efl/fast/repaint/region-painting-invalidation-expected.txt: Added.
* platform/efl/fast/repaint/region-painting-via-layout-expected.txt:

Canonical link: https://commits.webkit.org/115049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128993 268f45cc-cd09-0410-ab3c-d52691b4dbfc