Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp
@@ -311,6 +311,7 @@ void DumpRenderTreeChrome::resetDefaultsToConsistentValues()
     DumpRenderTreeSupportEfl::setLoadsSiteIconsIgnoringImageLoadingSetting(mainView(), false);
     DumpRenderTreeSupportEfl::setSerializeHTTPLoads(false);
     DumpRenderTreeSupportEfl::setMinimumLogicalFontSize(mainView(), 9);
+    DumpRenderTreeSupportEfl::setCSSRegionsEnabled(mainView(), true);
 
     // Reset capacities for the memory cache for dead objects.
     static const unsigned cacheTotalCapacity =  8192 * 1024;
